# bazel.el

./: .bazelrc  BUILD  CODEOWNERS  MODULE.bazel  Makefile  README.md  WORKSPACE  bazel.el  manual.org  test.el
.github/workflows/: bazel-test.yaml
testdata/: bazelrc.org  buildifier.org  compile.org  completion-at-point.org  coverage.org  defun-navigation.org  detangle.awk  find-file-at-point.org  fix-visibility.org  flymake.org  http-archive-invalid.org  http-archive-no-directory.org  http-archive-no-unique-prefix.org  http-archive.org  indent.org  make_compile_out  make_coverage_out  make_fix_visibility_out  project.org  speedbar.org  target-completion-package.org  target-completion-repository.org  target-completion-root.org  test-at-point-c++.org  test-at-point-elisp.org  test-at-point-go.org  test-at-point-python.org  which-function.org  xref.org
